@@ -12,6 +12,9 @@ What's New in Python 2.6 alpha 1?
 Core and builtins
 -----------------
 
+- Patch #1970 by Antoine Pitrou: Speedup unicode whitespace and linebreak
+  detection
+
 - Added ``PyType_ClearCache()`` and ``sys._cleartypecache`` to clear the
   internal lookup cache for ref leak tests.
 
